# onQ

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  _review_diff.txt  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  src-tauri  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: SECURITY.md
.github/workflows/: ci.yml  docs.yml  perf.yml  release.yml
.storybook/: main.ts  preview.ts  tauri-mock.ts
benches/: baselines.json
crates/onq-app/: Cargo.toml  tauri.conf.json
crates/onq-app/capabilities/: default.json
crates/onq-app/icons/: icon.icns
crates/onq-app/legal/: LICENSE-GPL-3.0.txt  acknowledgments.md  crates.json  npm-packages.json  npm-third-party.md  runtime.md  third-party.md
crates/onq-app/src/: auto_lock.rs  backup.rs  commands.rs  global_shortcut.rs  legal.rs  lib.rs  main.rs  plugin_host.rs  state.rs
crates/onq-core/: Cargo.toml  trust_anchor.pub
crates/onq-core/benches/: README.md  merge_bench.rs  search_bench.rs
crates/onq-core/src/: audit.rs  crypto.rs  db.rs  embed.rs  embedding_index.rs  error.rs  export.rs  folder_path.rs  frontmatter.rs  history.rs  keychain.rs  lib.rs  lock.rs  merge.rs  migrate.rs  path_util.rs  plugin.rs  plugin_install.rs  reconcile.rs  recovery.rs  schema.rs  search.rs  signature.rs  smart_folder_dsl.rs  smart_folder_visual.rs  sync.rs  sync_state.rs  tag_suggest.rs  template.rs  ulid.rs  vault.rs
crates/onq-core/src/backup/: format.rs  layout.rs  mod.rs  payload.rs  replace.rs
crates/onq-core/src/import/: chatgpt_export.rs  json_array.rs  markdown_dir.rs  mod.rs
crates/onq-core/tests/: keychain.rs
crates/onq-core/tests/conformance/: search_ndcg.rs
crates/onq-core/tests/fixtures/: compat-vault.md
crates/onq-core/tests/integration/: compat_vault.rs  db_roundtrip.rs  embed_real.rs  history.rs  plugin_load.rs
crates/onq-plugin-sdk/: Cargo.toml
crates/onq-plugin-sdk/src/: lib.rs
crates/onq-test-utils/: Cargo.toml
crates/onq-test-utils/src/: fixtures.rs  lib.rs  mock_keychain.rs  mock_ort.rs
docs-site/: index.md  installation.md  usage.md
docs-site/.vitepress/: config.mts
docs/adr/: 0001-plugin-embedders.md
docs/plugins/: README.md
docs/superpowers/plans/: 2026-07-23-complete-product-gap-closure.md  DEFERRED.md
scripts/: check-perf-regression.sh  check-prereqs.sh  compute-sha256.sh  generate-compat-vault.sh  generate-latest-json.sh  regen-credits.sh  release.sh
src/: App.svelte  App.test.ts  ci-workflows.test.ts  main.ts  updater.test.ts
src/lib/: openUrl.ts  shortcut.test.ts  shortcut.ts
src/lib/api/: about.ts  audit.ts  backup.ts  backupRemind.ts  folders.ts  history.ts  importExport.ts  lock.ts  plugins.ts  prompts.ts  recent.ts  search.ts  session.ts  settings.ts  smartFolderVisual.ts  smartFolders.ts  sync.ts  tags.ts  template.ts  tray.ts  updates.ts  vault.ts  vaults.ts
src/lib/components/: ConflictResolver.stories.svelte  ConflictResolver.svelte  DiffViewer.stories.svelte  DiffViewer.svelte  Editor.stories.svelte  Editor.svelte  EmptyState.stories.svelte  EmptyState.svelte  LibraryPage.svelte  Palette.stories.svelte  Palette.svelte  RecoveryPhrase.stories.svelte  RecoveryPhrase.svelte  SettingsPage.svelte  SettingsPanel.svelte  SmartFolderVisualBuilder.svelte  TutorialOverlay.svelte  TutorialOverlay.test.ts  VaultUnlock.svelte
src/lib/components/about/: AboutPage.svelte  CreditsPage.svelte  LicensesPage.svelte
src/lib/components/editor/: BodyEditor.svelte  BodyEditor.test.ts  EditorFooter.svelte  EditorHeader.svelte  TagInput.svelte  TagInput.test.ts
src/lib/components/primitives/: Button.stories.svelte  Button.svelte  ConfirmDialog.stories.svelte  ConfirmDialog.svelte  GlassCard.stories.svelte  GlassCard.svelte  Input.stories.svelte  Input.svelte  Modal.stories.svelte  Modal.svelte  Pager.svelte  TagChip.stories.svelte  TagChip.svelte  TutorialOverlay.stories.svelte  TutorialOverlay.svelte
src/lib/components/settings/: AuditSection.svelte  (+2 more)
src/lib/i18n/: catalogs.ts  de.ts  en.ts  es.ts  fr.ts  i18n.test.ts  index.ts  locale.ts  resolve.ts  th.ts  types.ts  zh.ts
src/lib/stores/: globalShortcut.test.ts  globalShortcut.ts  navigation.ts  palette.svelte.test.ts  palette.svelte.ts  prompts.test.ts  prompts.ts  search.test.ts  search.ts  settings.test.ts  settings.ts  theme.ts  tutorial.test.ts  tutorial.ts
src/lib/styles/: glass.css  motion.css  settings-chrome.css  tokens.css  tokens.light.css
src/lib/types/: prompt.ts  search.ts
src/lib/utils/: debounce.ts  folderPath.test.ts  folderPath.ts  highlightSnippet.test.ts  highlightSnippet.ts  recentPrompts.test.ts  recentPrompts.ts
tests/a11y/: axe.spec.ts  keyboard.spec.ts  tauri-mock.ts
tests/e2e/: sync.spec.ts
tests/fixtures/sample-plugin/: .gitignore  Cargo.toml  build-and-sign.sh  manifest.toml  signature.sig  signing-key.pem  signing-key.pub
tests/fixtures/sample-plugin/src/: lib.rs
