[workspace]
resolver = "2"
members = [
    "crates/onq-core",
    "crates/onq-app",
    "crates/onq-test-utils",
    "crates/onq-plugin-sdk",
]

[workspace.package]
version = "1.3.3"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/visorcraft/onQ"
rust-version = "1.75"

[workspace.dependencies]
bip39 = { version = "2", features = ["rand"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
notify = "6"
# Dense ANN + replace_index published in 0.61.0; keep aligned with MongrelDB releases.
mongreldb-core = "0.62.0"
onq-core = { path = "crates/onq-core", version = "1.0.1" }
onq-test-utils = { path = "crates/onq-test-utils", version = "1.0.1" }
keyring = { version = "3", features = [] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24", "download-binaries", "tls-rustls"] }
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.20"
ndarray = "0.15"
diffy = "0.5"
sha2 = "0.10"
aes-gcm = "0.10"
libloading = "0.9"
onq-plugin-sdk = { path = "crates/onq-plugin-sdk", version = "1.0.1" }
tar = "0.4"
flate2 = "1"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
