[package]
name = "onQ"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "onq_app_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
onq-core = { path = "../onq-core", version = "1.10.1", features = ["real-keychain"] }
mongreldb-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { version = "0.9", features = ["thread_rng"] }
chrono = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
onq-plugin-sdk = { workspace = true }
libloading = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
onq-test-utils = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "linux")))'.dependencies]
tauri-plugin-global-shortcut = "2"
